--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
        </div>
         <div class="box other" id="others">
           <div class="item drivePack">
-            <a href="http://dl.driverpack.io/17-online/DriverPack-17-Online.exe">
+            <a href="http://dl.driverpack.io/17-online/DriverPack-17-Online.exe" target="_blank">
             <img src="drivepack.jpg" alt="drivePack"></a>
             <p class="name">التعريفات</p>
           </div>
@@ -123,12 +123,12 @@
            <p class="name">Shareit</p>
           </div>
           <div class="item formatfactory">
-           <a href="https://dw.uptodown.com/dwn/KstDx2U7roDf7UJFHWNDaHG_z13CcQRfT_HEPKy56TVo_ikZaRFXRSHLH0uueJb_v7GySHxd67svw9S6kcidQAVek7KG8HTHTKv-rggmxR6XOQE749J3e6uoaaAJSS8r/pYG23dVYuKlHh8N6d9oSIVoPckevosNUdGyTthIQbdo1WF3afsL2iREN35SHf6l7Wr6t8nxF8Fkz-0FrWT_lrcQqHW1-ldMD9kfyiwEssY_bfsJLdSGDjSeHrGfBDnSZ/X1pxe3BVntaXJpu_77OQ5LKF4hP292K1GxtTCcI6GyO931ozZmKpfnF5zunONVmssgN6q6usdS6xLiDME01fXA==/">
+           <a href="https://dw.uptodown.com/dwn/KstDx2U7roDf7UJFHWNDaHG_z13CcQRfT_HEPKy56TVo_ikZaRFXRSHLH0uueJb_v7GySHxd67svw9S6kcidQAVek7KG8HTHTKv-rggmxR6XOQE749J3e6uoaaAJSS8r/pYG23dVYuKlHh8N6d9oSIVoPckevosNUdGyTthIQbdo1WF3afsL2iREN35SHf6l7Wr6t8nxF8Fkz-0FrWT_lrcQqHW1-ldMD9kfyiwEssY_bfsJLdSGDjSeHrGfBDnSZ/X1pxe3BVntaXJpu_77OQ5LKF4hP292K1GxtTCcI6GyO931ozZmKpfnF5zunONVmssgN6q6usdS6xLiDME01fXA==/" target="_blank">
              <img src="format-factory.jpg" alt="format-factory"></a>
            <p class="name">Format-Factory</p>
           </div>
           <div class="item audacity">
-           <a href="https://dw.uptodown.com/dwn/KstDx2U7roDf7UJFHWNDaGt0QjzCWyQl0HNSacR_1_EqcAVZ4qccunifIiPCTWnP3ZU6LvZcfugEeWNe5F6u30v__PiZfOL4hRWk0_G_KJ_AWnfgd2MEuZVgBHnQdscV/ZJy6izOa2oQYtCn9MQLlW8x6HP4NmtMiyGQCAt6iCjFW8W2yHmNB3UY8j9V8-6EHsHn9JWsNUeIIVq21wQDjqGR9zTmJyA4QwCslD-PvBFRC-GoLDrEZjm6v0U4fwnQ9/usc9kKrzsbcdWA6UeanSe5-PHpRjJXRggy3fh23nKs4N67dSHBYCmqcBvF5a8K9k/">
+           <a href="https://dw.uptodown.com/dwn/KstDx2U7roDf7UJFHWNDaGt0QjzCWyQl0HNSacR_1_EqcAVZ4qccunifIiPCTWnP3ZU6LvZcfugEeWNe5F6u30v__PiZfOL4hRWk0_G_KJ_AWnfgd2MEuZVgBHnQdscV/ZJy6izOa2oQYtCn9MQLlW8x6HP4NmtMiyGQCAt6iCjFW8W2yHmNB3UY8j9V8-6EHsHn9JWsNUeIIVq21wQDjqGR9zTmJyA4QwCslD-PvBFRC-GoLDrEZjm6v0U4fwnQ9/usc9kKrzsbcdWA6UeanSe5-PHpRjJXRggy3fh23nKs4N67dSHBYCmqcBvF5a8K9k/" target="_blank">
              <img src="audacity.jpg" alt="audacity"></a>
            <p class="name">Audacity</p>
           </div>
@@ -144,7 +144,7 @@
             <p class="name">Team Viewer</p>
           </div>
           <div class="item net-framework">
-           <a href="https://dotnet.microsoft.com/download/dotnet-framework/thank-you/net472-web-installer">
+           <a href="https://dotnet.microsoft.com/download/dotnet-framework/thank-you/net472-web-installer" target="_blank">
              <img src="net-framework.jpg" alt=".Net-framework"></a>
            <p class="name">.Net-framework 4.7.2</p>
           </div>
@@ -157,8 +157,8 @@
             <img src="office2010.png" alt="office-2010">
             <ul class="bit">
               2010
-            <li><a href="https://f1.file-upload.download:183/d/rmxhvtgnnlgpv7w7jgzngeksz5ewjmuqj3lgiw6wxpqldbokodcx6c54uvhyr4mbkv26hhn3/Office.Pro.Plus2010.rar">عربى</a></li>
-            <li><a href="https://download1595.mediafire.com/pkxdt2jtv1yg/4pikr4e2du7ds0g/Microsoft+Office+2010+pro+plus+x32+Bit+En-Us+By+Artist+Abram.rar">English</a></li>
+            <li><a href="https://f1.file-upload.download:183/d/rmxhvtgnnlgpv7w7jgzngeksz5ewjmuqj3lgiw6wxpqldbokodcx6c54uvhyr4mbkv26hhn3/Office.Pro.Plus2010.rar" target="_blank">عربى</a></li>
+            <li><a href="https://download1595.mediafire.com/pkxdt2jtv1yg/4pikr4e2du7ds0g/Microsoft+Office+2010+pro+plus+x32+Bit+En-Us+By+Artist+Abram.rar" target="_blank">English</a></li>
           </ul>
           </div>
           <div class="item office2013">
